# automation_feature_table

./: .env.example  .gitignore  .prd-registry.json  CLAUDE.md  README.md  dashboard_files.b64  poker_capture.spec  pyproject.toml  runtime_hook.py
.github/workflows/: ci.yml
deploy/: .env.example  Dockerfile  README.md  build-package.ps1  container-manager-project.json  deploy-to-nas.ps1  docker-compose.yml  install.sh  requirements.txt
deploy/metabase/: README.md  dashboard-queries.sql  setup_metabase.py
docs/: GOOGLE_DOCS_GUIDE.md  ISSUE_UPDATE_GUIDE.md  NAS_SETUP.md  NAS_SMB_CHECKLIST.md  PRD-0009-gfx-json-simulator.md  db_log.md  dean.md
docs/checklists/: PRD-0001.md  PRD-0002.md  PRD-0003.md  PRD-0004.md  PRD-0005.md  PRD-0007.md  PRD-0008.md  PRD-0009.md  PRD-0010.md  PRD-0011.md
docs/mockups/: live-api-architecture.html  simulator-main.html  simulator-workflows.html
scripts/: build_exe.ps1  fix_smb_signing.ps1  prd_to_google_docs.py  sync_nas_to_supabase.py
src/: __init__.py  main.py
src/config/: settings.py
src/dashboard/: __init__.py  alerts.py  monitoring_service.py  websocket_server.py
src/database/: __init__.py  connection.py  models.py  monitoring_repository.py  repository.py  supabase_client.py  supabase_repository.py
src/fallback/: __init__.py  detector.py  manual_marker.py
src/fusion/: __init__.py  engine.py
src/grading/: __init__.py  grader.py
src/models/: __init__.py  hand.py
src/output/: __init__.py  clip_marker.py  overlay.py
src/primary/: __init__.py  fallback_watcher.py  hand_classifier.py  json_file_watcher.py  pokergfx_client.py  pokergfx_file_parser.py  smb_health_checker.py
src/recording/: __init__.py  manager.py  session.py  storage.py
src/secondary/: __init__.py  gemini_live.py  video_capture.py
src/simulator/: README.md  __init__.py  config.py  gfx_json_simulator.py  hand_splitter.py  history.py
src/sync_agent/: __init__.py  batch_queue.py  build.ps1  config.env.example  config.py  file_handler.py  install.ps1  (+6 more)
tests/: __init__.py  conftest.py  test_alerts.py  test_batch_queue.py  test_dashboard_websocket.py  test_database_connection.py  test_database_repository.py  test_fallback.py  test_file_browser.py  test_fusion.py  test_gfx_json_simulator.py  test_grading.py  test_hand_classifier.py  test_history.py  test_json_file_watcher.py  test_json_file_watcher_extended.py  test_main.py  test_main_extended.py  test_monitoring_repository.py  test_monitoring_service.py  test_output.py  test_pokergfx_client.py  test_prd_to_google_docs.py  test_recording.py  test_secondary.py  test_simulator_config.py  test_simulator_integration.py  test_smb_fallback.py  test_supabase_client.py  test_supabase_repository.py  test_sync_agent_main.py  test_vmix.py
(+31 files in other folders)
