[project]
name = "poker-hand-auto-capture"
version = "0.1.0"
description = "Poker Feature Table Hand Auto-Capture and Classification System"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your@email.com" }]

dependencies = [
    "phevaluator>=0.5.0",
    "websockets>=12.0",
    "opencv-python>=4.8.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
    "urllib3>=2.6.3",  # CVE-2026-21441 fix
    "defusedxml>=0.7.1",  # XML parsing security
    # Database - Supabase (primary)
    "supabase>=2.0.0",
    # Database - PostgreSQL (legacy/deprecated)
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    # File watching (NAS JSON mode)
    "watchdog>=3.0.0",
    "aiofiles>=23.0.0",
    # Dashboard (PRD-0008)
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    # Simulator GUI (PRD-0009)
    "streamlit>=1.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
